<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AnimalPet</string>
    <string name="pet_africa">PetCaRe AfricA</string>
    <string name="profile">Profile</string>
    <string name="notifications">notifications</string>
    <string name="collection">collection</string>
    <string name="inbox">inbox</string>
    <string name="setting">setting</string>
    <string name="others">others</string>
    <string name="settings">settings</string>
    <string name="support">support</string>
    <string name="about">about</string>
    <string name="tawa">tawa</string>
    <string name="verified">verified</string>
    <string name="tawa_ngwira">tawa_ngwira</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_notifications">notifications</string>
    <string name="hello_blank_profile">profile</string>
    <string name="hello_blank_schemes">schemes</string>
    <string name="hello_blank_support">support</string>
    <string name="schemes">schemes</string>
    <string name="home">home</string>
    <string name="Schemes">Schemes</string>
    <string name="Home">Home</string>
    <string name="Others">Others</string>
    <string name="Setting">Settings</string>
    <string name="Inbox">Inbox</string>
    <string name="Notifications">Notifications</string>
    <string name="Support">Support</string>
    <string name="About">About</string>
    <string name="enter_your_email_and_then_follow_the_steps_inorder_for_you_to_recover_your_email_password">Enter your email and then follow the steps inorder for you to recover your Email Password</string>
    <string name="Tawa_Ngwira">Tawa_Ngwira</string>
    <string name="Logged">Logged</string>
    <string name="Bluce">Bluce*</string>
    <string name="german_shepred">German Shepred*</string>
    <string name="measurements">Measurements</string>
    <string name="my_pet">My Pet</string>
    <string name="health_and_status">Health and Status</string>
    <string name="register_pet">Register Pet</string>
    <string name="registerUser" tools:ignore="DuplicateDefinition">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password_click_here">Forget password? click here</string>
    <string name="set_password" tools:ignore="DuplicateDefinition">Password</string>
    <string name="username">Username</string>
    <string name="log_in">Log in</string>
    <string name="registerPet" tools:ignore="DuplicateDefinition">Register</string>
    <string name="petcare_afric">PetCAre Africa</string>
    <string name="hello_from_my_pet_dashbord">Hello from my pet dashbord</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone #</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="basic_details">Basic Details</string>
    <string name="color">Color</string>
    <string name="breed">Breed</string>
    <string name="camper_name">Camper name</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next" tools:ignore="DuplicateDefinition">Next</string>
    <string name="health_details">Health Details</string>
    <string name="symptoms">Symptoms</string>
    <string name="weight_kg">Weight(kg)</string>
    <string name="health_id">Health ID</string>
    <string name="scheme">Scheme</string>
    <string name="rabies_vaccination">Rabies Vaccination</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="go_next">Next</string>
    <string name="veterinary_details">Veterinary Details</string>
    <string name="rabies_due">Rabies Due</string>
    <string name="address">Address</string>
    <string name="vet_name">Vet Name</string>
    <string name="certificate_no">Certificate no.</string>
    <string name="finish">Finish</string>
    <string name="comment">Comment</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="send_email">Send Email</string>
    <string name="email">Email</string>
    <string name="calorie">Calorie</string>
    <string name="height">height</string>
    <string name="result">result</string>
    <string name="Result">Result</string>
    <string name="BMI">BMI</string>
    <string name="Vaccination">vaccination</string>
    <string name="pet_name">pet name</string>
    <string name="compute">Compute</string>
    <string name="reset">Reset</string>
    <string name="sedentary">Sedentary</string>
    <string name="Submit">Submit</string>

</resources>