<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/menuDashbord"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/Home" />

    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/ic_baseline_content_paste_24"
        android:title="@string/profile" />

    <item
         android:id="@+id/menuSchemes"
         android:icon="@drawable/ic_baseline_add_location_24"
         android:title="@string/Schemes" />
    <item
        android:id="@+id/menuNotification"
        android:icon="@drawable/ic_baseline_notifications_24"
         android:title="@string/Notifications" />

    <item
        android:id="@+id/menuSetting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/Setting" />

    <item android:title="@string/Others">
        <menu>

            <item
                android:id="@+id/menuSupport"
                android:icon="@drawable/ic_baseline_support_agent_24"
                android:title="@string/Support" />

            <item
                android:id="@+id/menuAboutUs"
                android:icon="@drawable/ic_baseline_contact_support_24"
                android:title="@string/About" />

        </menu>
    </item>




</menu>