<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <TextView
        android:id="@+id/showPetHeader"
        android:layout_width="match_parent"
        android:layout_height="75sp"
        android:background="@android:color/holo_blue_dark"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView2"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/profile"
        android:scaleType="centerCrop"
        android:src="@drawable/person"
        app:civ_border_width="0.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username1"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_icon_user"
        android:drawablePadding="10sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

    <EditText
        android:id="@+id/password1"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginTop="24dp"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="10sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:ems="10"
        android:background="@drawable/custom_input"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/username1"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/username1"
        app:layout_constraintTop_toBottomOf="@+id/username1" />

    <TextView
        android:id="@+id/TxtResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="20dp"
        android:text="@string/forget_password_click_here"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1"
        app:layout_constraintVertical_bias="0.006"/>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:layout_marginTop="45dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/sign_in"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1"
        app:layout_constraintVertical_bias="0.248"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/TxtRegisterFromSignIn"
        android:layout_width="55dp"
        android:layout_height="17dp"
        android:text="@string/register"
        android:textColor="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.044" />


</androidx.constraintlayout.widget.ConstraintLayout>